--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -1,3 +1,118 @@
 = Document Index 
 
 == Under Development
+
+[cols="1a,1a"]
+|===
+|No|Acten Designation||Ort|Jahr|Mon|Z.
+
+
+|1.
+l|Vorstellung des Col. Krückeberg
+No 10 in Berenbesch
+Anb
+l|Bewilligung
+eines darlehes
+ad 200 r.
+|Bbg.
+|1841
+|Octob.
+|2.
+
+|2.
+l|Berichts Amts Bückeburg
+l|Cour. aus
+|e
+|e
+|e
+|7
+
+|e
+l|Cgt KRes. an dasselben
+|Kammerbase
+|e
+|e
+|e
+|14
+
+
+|3
+l|Vors. des Colons Krückeberg
+l|gegen Ver
+|e
+|e
+|Nov
+|11
+
+
+. 1841
+Anb.
+Bericht Amts Bückeberg
+Cour. aus
+7.
+gst. K. Res. an dasselbe —
+14
+Kammerkesse
+Vorst. des Colons Krückeberg
+Nov. 11
+gegen Ver¬
+Vortrag des GHR. odReik
+pfandre
+e
+"
+15.
+-
+seiner sämmt¬
+Ist. Res. an p Krückeberg
+"
+lichen Län¬
+21
+Berenbsch
+Vorst. des l. Kruckeberg
+dereien
+Blig
+Cpt. K Res. an Of. Creuzinger
+" 25.
+item
+Gesuch um
+Bericht des Of. Creuzinger
+Dezbr 10
+Baum
+Verkauf sei¬
+Anl. Situations-Risk der
+ner Länderei,
+en auf der
+Söhren Weide
+Söhren
+16
+1.
+Bby.
+6, Vortrag des GKK. ödKeik
+Weide
+Höchstes Rescr. Ser. Reg. ~
+19
+betß.
+P. V. des H. odReck u Höchstes
+“
+“ 23
+Rescr. Sr. Durchlaucht
+e
+Cpt. KRes. aus Amt Bückeburg
+,,24.
+1842
+"
+2
+Jan
+Bericht Amts Bäckeberg
+" 20.
+" Cst. KRes. an dasselbe.
+desgl. an den KKm. Berger
+Febr
+Bericht Amts Bückeberg
+Obligation
+Obligation über aus Fürstl.
+10,
+Kammerkasse geliehene
+200 rd Courant
+N.
+2.
