--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -1,5 +1,7 @@
 = Document Index 
 
+image::01-r.png[link=self]
+
 == Under Development
 
 [cols="1a,1a"]
@@ -43,6 +45,7 @@ l|gegen Ver
 |e
 |Nov
 |11
+|===
 
 
 . 1841
