--- a/modules/689/pages/literal-doc-index.adoc
+++ b/modules/689/pages/literal-doc-index.adoc
@@ -5,38 +5,22 @@ image::01-r.png[link=self]
 
 == Under Development
 
-[%header,cols="1,8,3,2,2,2,1"]
-|===
-|No|Acten Designation||Ort|Jahr|Mon|Z.
+
+....
+No   Acten  Designation        Ort Jahr Mon Z.
 
 
-|1.
-|Vorstellung des Col. Krückeberg +
-No 10 in Berenbesch +
-Anb
-|Bewilligung +
-eines darlehes +
-ad 200 r.
-|Bbg.
-|1841
-|Octob.
-|2.
-
-|2.
-|Berichts Amts Bückeburg
-|Cour. aus
-|e
-|e
-|e
-|7
-
-|e
-|Cgt KRes. an dasselbe
-|Kammerbase
-|e
-|e
-|e
-|14
+1.  Vorstellung des Col. Krückeberg  Bewilligung                      October
+No 10 in Berenbesch                  eines darlehes  Bbg.      1841             2
+Anb                                  ad 200 rP                 
+2.  Berichts Amts Bückeburg          Cour. aus       e            e        e    7  
+    Cpt. KRes. an dacstelbe          Kammerkasse     e            e        e   14
+3. Vorst. des Colons Krückeberg      gegen Ver       e            e      Nov   11    
+e  Vorsrng des GKR odReiR            pfaudung        e            e        e   15   
+e Cpt KRes. an Krückeberg            seiner Sammt
+                                     lichebn Lau     Berenbusch   e        e    21
+4. Vorst. des [e/p] Krückeberg       dereien
+e  Cpt. KRes. an Of. Creuziner       item            Bbg          e        e    25   
 
 
 |3
@@ -123,3 +107,4 @@ Kammerkasse geliehene
 200 rd Courant
 N.
 2.
+....
