--- a/modules/689/pages/doc2.adoc
+++ b/modules/689/pages/doc2.adoc
@@ -69,8 +69,40 @@ N. C. 438[i/1]                      Gesuch des Colons Krückeberg N. 10
            tirten Schulden haften auf der genannten
            Stätte 700 r.
            Für ein Anlehen von 190 rt wurde dem
-           nach 
+           nach die Stätte das p Krinkaborg nach Hinreichende
+           Sicherheit gewähren.
+           Aus Grund des vorgetragenen stellen wir den
+           unterthänigsten Antrag: den Colon Krückeberg
+           durch uns auf seine Vorstellung dahin beschei¬
+           den lassen zu wollen, daß sein Gesuch, einen
+           Theil der Forderung der Hämpel Söhne
+           in Minden terminlich abtragen zu dürfen.
+           nicht statt finden könne, ihm jedoch gestattet
+           werden solle, behuf Berichtigung solcher For-
+           derung ein Anlehen von 190 rt aufzunehmen
+           Schließlich bemerken wir noch, daß wir die
+           Vollziehung der gegen Krückeberg erkannten
+           Auspfandung einstweilen sistirt haben
+           Bückeburg den 7t October 1841.
 
+           Haucka N Neuhsel, Yöcker[Jücker]
+
+           Rl. rescrib: Das Amt habe
+           wie angetragen den
+           Krückeberg zu bescheiden.
+           B. 14. Oct. 1841
+
+           Spring
+
+
+
+
+           vat.
+....
+
+
+Is image 06-l.png part of document  #2?1
+....
 St. 3 gl                 N. C. 4487.
 6. 1                     N.P. 1274.
 ______
@@ -93,3 +125,4 @@ asu Amt Buckeburg                berg N. 10 in Bernn
 
                             Fm         L 
 ....
+
