--- a/modules/689/pages/doc2.adoc
+++ b/modules/689/pages/doc2.adoc
@@ -57,7 +57,7 @@ N. C. 438i                          Gesuch des Colons Krückeberg N. 10
            Im Übrigen erscheint es uns nothwendig, daß
            der genannte Colon Krückeberg ein Anlehen
            contrahire, um seine Schuld abtragen zu
-           können, und wird er dazu eines Anleses
+           können, und wird er dazu eines Anlehens
            vom 190 rt bedürfen, waren nach Abtragung
            der Schuld nur ein kleiner Rest übrig bleiben
            wird, welchen er zur Deckung der auf seiner
