--- a/modules/689/pages/doc2.adoc
+++ b/modules/689/pages/doc2.adoc
@@ -74,8 +74,9 @@ N. C. 438i                          Gesuch des Colons Krückeberg N. 10
            Für ein Anlehen von 190 rt würde dem
            nach
 
-Resume->   die Stätte das p Krinkaborg nach Hinreichende
-page 3     Sicherheit gewähren.
+           nach die Stätte das p Krinkaborg nach Hinreichende
+           Sicherheit gewähren.
+
            Aus Grund des vorgetragenen stellen wir den
            unterthänigsten Antrag: den Colon Krückeberg
            durch uns auf seine Vorstellung dahin beschei-
