--- a/modules/689/pages/doc2.adoc
+++ b/modules/689/pages/doc2.adoc
@@ -74,24 +74,25 @@ N. C. 438i                          Gesuch des Colons Krückeberg N. 10
            Für ein Anlehen von 190 rt würde dem
            nach
 
-           nach die Stätte das p Krinkaborg nach Hinreichende
+           nach die Stätte das p Krückeberg nach hinreichende
            Sicherheit gewähren.
 
-           Aus Grund des vorgetragenen stellen wir den
+           Aus Grund des Vorgetragenen stellen wir den
            unterthänigsten Antrag: den Colon Krückeberg
            durch uns auf seine Vorstellung dahin beschei-
            den lassen zu wollen, daß sein Gesuch, einen
            Theil der Forderung der Hämpel Söhne
-           in Minden terminlich abtragen zu dürfen.
+           in Minden terminlich abtragen zu dürfen,
            nicht statt finden könne, ihm jedoch gestattet
            werden solle, behuf Berichtigung solcher For-
-           derung ein Anlehen von 190 rt aufzunehmen
+           derung ein Anlehen von 190 rt aufzunehmen.
+
            Schließlich bemerken wir noch, daß wir die
            Vollziehung der gegen Krückeberg erkannten
            Auspfandung einstweilen sistirt haben
            Bückeburg den 7t October 1841.
 
-           Haucka N Neuhsel, Yöcker[Jöcker]
+           Hauck N Neuhsel, Yöcker[Jöcker]
 
            Rl. rescrib: Das Amt habe
            wie angetragen den
