--- a/modules/689/pages/doc2.adoc
+++ b/modules/689/pages/doc2.adoc
@@ -67,7 +67,7 @@ N. C. 438i                          Gesuch des Colons Krückeberg N. 10
            Die zur Stätte des Colons Krückeberg N 10.
            in Berenbusch gehörigen Landereien sind 10
            Morgen 30 Ruthen groß und sind die Hofs-
-           gebäude zu 525 rt asseiurirt. An unseren-
+           gebäude zu 525 rt assecurirt. An unseren-
            tirten Schulden haften auf der genannten
            Stätte 700 r.
 
