--- a/modules/689/pages/doc2.adoc
+++ b/modules/689/pages/doc2.adoc
@@ -7,6 +7,8 @@ image::05-l.png[link=self]
 image::05-r.png[link=self]
 
 
+== Transliteration and Translation
+
 ....
 N. C. 4487                                         pr. in Cam 11 Oct 1841
 
@@ -104,3 +106,59 @@ N. C. 438i                          Gesuch des Colons Krückeberg N. 10
 
            vat.
 ....
+
+[verse]
+____
+To the Princely Rent Chamber
+Report from the Amt of Bückeburg
+
+Regarding: Petition of the colon (farmholder) Krückeberg No. 10 in
+Berenbusch concerning a loan.
+
+On the attached petition by Colon Krückeberg No. 10 in Berenbusch we report
+as follows.
+
+It is correct that Hempel & Sons in Minden have sued the petitioner for the
+amount of 133 rthl 7 Mariengroschen plus 5% interest accruing since the
+year 1833 for a debt that still stems from his parents, and that—at the
+plaintiffs’ request—distraint has already been ordered against Krückeberg
+for that sum and for 27 mg in percentage-based court costs.
+
+In our provisional, non-prejudicial opinion there is no legal basis on
+which the petitioner could claim the scheduling of installment payments
+with respect to part of the claim brought by Hempel & Sons. We are firmly
+convinced that Hempel & Sons—who, in the lawsuit pending since 30 July 1836
+against Krückeberg, have conducted proceedings twice in appellate session
+and once in supplicatory session and have thereby incurred considerable
+costs—will in no way agree to permit Colon Krückeberg a partial installment
+plan.
+
+Apart from this, we consider it necessary that the said Colon Krückeberg
+take out a loan in order to pay down his debt; for this he will need a loan
+of 190 rthl. After payment of the debt only a small remainder will be left,
+which he may use to cover the litigation costs incurred on his side.
+
+The lands belonging to the holding (Stätte) of Colon Krückeberg No. 10 in
+Berenbusch comprise 10 Morgen 30 Ruthen, and the farm buildings are insured
+for 525 rthl. Inventoried debts attached to the said holding amount to 700
+rthl.
+
+A loan of 190 rthl would, upon provision of sufficient security on the
+holding of the petitioner Krückeberg in Berenbusch, be grantable.
+
+On the basis of the foregoing we submit the most humble request that Colon
+Krückeberg, upon his petition, be informed that his request to be allowed
+to pay part of the claim of Hempel & Sons in Minden by installments cannot
+be approved; however, he may be permitted to take out a loan of 190 rthl
+for the settlement of that claim.
+
+Finally, we note that we have temporarily stayed execution of the distraint
+ordered against Krückeberg.
+Bückeburg, 7 October 1841.
+
+Hauck – Neuhsel – Jöcker
+
+Rescript: The Amt shall, as requested, notify Krückeberg.
+B[ückeburg], 14 Oct. 1841.
+Spring
+____
