--- a/modules/689/pages/doc2.adoc
+++ b/modules/689/pages/doc2.adoc
@@ -109,52 +109,60 @@ N. C. 438i                          Gesuch des Colons Krückeberg N. 10
 
 [verse]
 ____
+Chamber registry no. 4487; presented in the Chamber on 11 Oct 1841.
+
+Protocol no. 1274; with reference to Chamber file no. 438i.
+
 To the Princely Rent Chamber
 Report from the Amt of Bückeburg
 
-Regarding: Petition of the colon (farmholder) Krückeberg No. 10 in
-Berenbusch concerning a loan.
+Regarding: Petition of the colon (farmholder) Krückeberg No. 10
+in Berenbusch concerning a loan.
 
-On the attached petition by Colon Krückeberg No. 10 in Berenbusch we report
-as follows.
+On the attached petition by Colon Krückeberg No. 10 in Berenbusch
+we report as follows.
 
-It is correct that Hempel & Sons in Minden have sued the petitioner for the
-amount of 133 rthl 7 Mariengroschen plus 5% interest accruing since the
-year 1833 for a debt that still stems from his parents, and that—at the
-plaintiffs’ request—distraint has already been ordered against Krückeberg
-for that sum and for 27 mg in percentage-based court costs.
+It is correct that Hempel & Sons in Minden have sued the
+petitioner for the amount of 133 rthl 7 Mariengroschen plus 5%
+interest accruing since the year 1833 for a debt that still stems
+from his parents, and that—at the plaintiffs’ request—distraint
+has already been ordered against Krückeberg for that sum and for
+27 mg in percentage-based court costs.
 
-In our provisional, non-prejudicial opinion there is no legal basis on
-which the petitioner could claim the scheduling of installment payments
-with respect to part of the claim brought by Hempel & Sons. We are firmly
-convinced that Hempel & Sons—who, in the lawsuit pending since 30 July 1836
-against Krückeberg, have conducted proceedings twice in appellate session
-and once in supplicatory session and have thereby incurred considerable
-costs—will in no way agree to permit Colon Krückeberg a partial installment
-plan.
+In our provisional, non-prejudicial opinion there is no legal
+basis on which the petitioner could claim the scheduling of
+installment payments with respect to part of the claim brought by
+Hempel & Sons. We are firmly convinced that Hempel & Sons—who, in
+the lawsuit pending since 30 July 1836 against Krückeberg, have
+conducted proceedings twice in appellate session and once in
+supplicatory session and have thereby incurred considerable
+costs—will in no way agree to permit Colon Krückeberg a partial
+installment plan.
 
-Apart from this, we consider it necessary that the said Colon Krückeberg
-take out a loan in order to pay down his debt; for this he will need a loan
-of 190 rthl. After payment of the debt only a small remainder will be left,
-which he may use to cover the litigation costs incurred on his side.
+Apart from this, we consider it necessary that the said Colon
+Krückeberg take out a loan in order to pay down his debt; for
+this he will need a loan of 190 rthl. After payment of the debt
+only a small remainder will be left, which he may use to cover
+the litigation costs incurred on his side.
 
-The lands belonging to the holding (Stätte) of Colon Krückeberg No. 10 in
-Berenbusch comprise 10 Morgen 30 Ruthen, and the farm buildings are insured
-for 525 rthl. Inventoried debts attached to the said holding amount to 700
-rthl.
+The lands belonging to the holding (Stätte) of Colon Krückeberg
+No. 10 in Berenbusch comprise 10 Morgen 30 Ruthen, and the farm
+buildings are insured for 525 rthl. Inventoried debts attached to
+the said holding amount to 700 rthl.
 
-A loan of 190 rthl would, upon provision of sufficient security on the
-holding of the petitioner Krückeberg in Berenbusch, be grantable.
+A loan of 190 rthl would, upon provision of sufficient security
+on the holding of the petitioner Krückeberg in Berenbusch, be
+grantable.
 
-On the basis of the foregoing we submit the most humble request that Colon
-Krückeberg, upon his petition, be informed that his request to be allowed
-to pay part of the claim of Hempel & Sons in Minden by installments cannot
-be approved; however, he may be permitted to take out a loan of 190 rthl
-for the settlement of that claim.
+On the basis of the foregoing we submit the most humble request
+that Colon Krückeberg, upon his petition, be informed that his
+request to be allowed to pay part of the claim of Hempel & Sons
+in Minden by installments cannot be approved; however, he may be
+permitted to take out a loan of 190 rthl for the settlement of
+that claim.
 
-Finally, we note that we have temporarily stayed execution of the distraint
-ordered against Krückeberg.
-Bückeburg, 7 October 1841.
+Finally, we note that we have temporarily stayed execution of the
+distraint ordered against Krückeberg.  Bückeburg, 7 October 1841.
 
 Hauck – Neuhsel – Jöcker
 
@@ -162,3 +170,64 @@ Rescript: The Amt shall, as requested, notify Krückeberg.
 B[ückeburg], 14 Oct. 1841.
 Spring
 ____
+
+== Glossary
+
+N. C.:: Rent Chamber registry/file number (likely *Numero Cammeral(e)* = “Chamber no.”). Used to track the case in the Rentkammer register.
+
+pr. in Cam:: *praesentiert in Cammer* — “presented in the Chamber.” A filing/receipt date line in the header.
+
+Num Pr.:: Protocol number of the outgoing report from the Amt (Amt’s register no.; *Numerus Protocolli*).
+
+ad:: Latin “with reference to / regarding.” Points to another file number (e.g., *ad N. C. 438i*).
+
+An — Fürstliche Rentkammer — Bericht — vom Amte Bückeburg:: Address line: “To the Princely Rent Chamber — Report — from the Amt (office) of Bückeburg.”
+
+B. (before a date in the margin):: Abbrev. for **Bückeburg** (place of issuance of the marginal rescript/date).
+
+Res., rescrib.:: *Rescriptum / rescribatur* — marginal order/instruction (“rescript”). Here: an order to the Amt on how to proceed.
+
+Betr.:: *Betreff* — “subject.”
+
+p. (before a person’s name):: *Petent* (the petitioner/supplicant in the matter).
+
+Colon:: Status/title of a farmholder on a “Stätte” (hereditary/tenure farm within a colonization estate). Not “colonel.”
+
+Stätte:: The homestead/holding (the farm property unit), not just any “place.”
+
+Morgen / Ruthen:: Historical land measures (regionally variable). Morgen ≈ 0.25–0.36 ha depending on locality; *Ruthe/Ruthe(n)* is a subunit.
+
+r / rt / rthl.:: **Reichsthaler** (currency). Spelled variously in the manuscript (rt., rthl., r.).
+
+mg:: **Mariengroschen** (small coin unit).
+
+appellatorio / supplicatorio:: Latin adverbs marking procedural stages: in appellate session / upon supplication (special petitionary procedure).
+
+unvorgreiflich(es Dafürhalten):: “without prejudice; provisional view/opinion.” Standard hedge in official writing of the period.
+
+Terminszahlungen:: Court-scheduled installment payments (payments set by term).
+
+Auspfandung:: Distraint/seizure (execution on property).
+
+sistirt:: Stayed/suspended (execution or proceedings temporarily put on hold).
+
+assecurirt:: 19th-cent. spelling of **assekuriert** (“insured”). In context: “the farm buildings are insured for 525 rthl.”
+
+Centumacialkosten:: Percentage-based (ad valorem) court costs/fees (literally “hundred-rate” costs).
+
+contrahire:: (ein Anlehen) contrahiren — to enter into/contract (a loan).
+
+N. (as in N. 10):: **Numero/Nummer** — “No.” (farm/holding number within the locality).
+
+v.M. (e.g., „unter 8 v.M.“):: **vorigen Monats** — “on the 8th of the previous month.” Common date shorthand in decisions or orders.
+
+Supplicant / Supplicanten:: Petitioner; person submitting the plea/petition.
+
+Anlehen / Anlehens (gen.):: Loan / of a loan.
+
+erscheint (vs. scheint):: “appears/it appears” — the more idiomatic bureaucratic verb here (*Im Übrigen erscheint es uns …*).
+
+Krückeberg (with u-bow):: The “u-Bogen” over **u** is the small curved mark indicating **u** (not **n**); helps distinguish in Kurrent script.
+
+Stätte … assecurirt … haften:: Standard collateral description: the holding (Stätte), insured value (assecurirt), and debts that “attach” (haften) to the holding.
+
