--- a/modules/689/pages/doc2.adoc
+++ b/modules/689/pages/doc2.adoc
@@ -9,8 +9,13 @@ image::05-r.png[link=self]
 
 == Transliteration and Translation
 
+[cols="1a,1a"]
+|===
+|Transliteration|Translation
+
+|
 ....
-N. C. 4487                                         pr. in Cam 11 Oct 1841
+N. C. 4487                            pr. in Cam 11 Oct 1841
 
 
 
@@ -23,9 +28,9 @@ N. C. 4487                                         pr. in Cam 11 Oct 1841
 
 Num Pr. 1274             
   ad                     
-N. C. 438i                          Gesuch des Colons Krückeberg N. 10        
-                                    in Berenbusch um Anlehnswesens   
-                                    Betr:
+N. C. 438i                   Gesuch des Colons Krückeberg N. 10        
+                             in Berenbusch um Anlehnswesens   
+                             Betr:
 
            Auf die anbei zurückerfolgende Bittschrift des Colons
            Kruckeberg N. 10 in Berenbusch verfehlen wir
@@ -107,6 +112,7 @@ N. C. 438i                          Gesuch des Colons Krückeberg N. 10
            vat.
 ....
 
+|
 [verse]
 ____
 Chamber registry no. 4487; presented in the Chamber on 11 Oct 1841.
@@ -170,6 +176,7 @@ Rescript: The Amt shall, as requested, notify Krückeberg.
 B[ückeburg], 14 Oct. 1841.
 Spring
 ____
+|===
 
 == Glossary
 
