--- a/modules/689/pages/doc2.adoc
+++ b/modules/689/pages/doc2.adoc
@@ -109,7 +109,7 @@ N. C. 438i                   Gesuch des Colons Krückeberg N. 10
 
 
 
-           vat.
+           vorl.[?]
 ....
 
 |
@@ -175,6 +175,10 @@ Hauck – Neuhsel – Jöcker
 Rescript: The Amt shall, as requested, notify Krückeberg.
 B[ückeburg], 14 Oct. 1841.
 Spring
+
+
+
+provisional
 ____
 |===
 
