--- a/modules/689/pages/doc2-copt.adoc
+++ b/modules/689/pages/doc2-copt.adoc
@@ -11,7 +11,7 @@ aus Amt Becknberg.                  berg N. 10 in Bernn
 
 
                                  Das Amt wird auf den
-                                 obigen Gegenstand betroffen
+                                 obigen Gegenstand betreffen
                                  de Bericht vom 7. d. M.
                                  beauftragt, wie angetra-
                                  gen den Krückeburg zu
@@ -29,6 +29,27 @@ N. 3/6
 C. 1/
 = 4/6.
 
-Cop. aus Amt Bückeburg.              N.C. 4487.
-                                     N.P. 1274.
+Cop. aus Amt Bückeburg.           N.C. 4487.
+                                  N.P. 1274.
+
+Capt                              Gesuch des Colons Krücke
+aus Amt Becknberg.                berg N. 10 in Bernn      
+                                  busch, um Anlehns-
+                                  consens betr:
+
+
+
+                                 Das Amt wird auf den
+                                 obigen Gegenstand betreffen
+                                 de Bericht vom 7. d. M.
+                                 beauftragt, wie angetra-
+                                 gen den Krückeburg zu
+                                 bescheiden.
+                                 Bbg. 14. Oct. 1841.
+                                 F. p.
+
+                                 Fm        L
+
+
+
 ....
