--- a/modules/689/pages/doc2.adoc
+++ b/modules/689/pages/doc2.adoc
@@ -2,7 +2,7 @@
 :page-role: wide
 
 
-image::04-r.png[link=self]
+image::04-r-original.png[link=self]
 image::05-l.png[link=self]
 image::05-r.png[link=self]
 
