--- a/modules/689/nav.adoc
+++ b/modules/689/nav.adoc
@@ -3,6 +3,7 @@
 * xref:cover.adoc[]
 * xref:doc-index.adoc[]
 * xref:doc1.adoc[]
-* xref:doc1-1i.adoc[]
-* xref:doc1-ad1.adoc[]
+** xref:doc1-1i.adoc[]
 * xref:doc2.adoc[]
+** xref:doc2-copt.adoc[]
+** xref:doc2-ad1.adoc[]
