--- a/modules/689/pages/doc2-ad1.adoc
+++ b/modules/689/pages/doc2-ad1.adoc
@@ -4,7 +4,7 @@ image::07-l.png[link=self]
 
 
 ....
-Colon Kruckeberg N 10 in
+Colon Krückeberg N 10 in
 Berenbusch
 Decr_____________6                                                           
 ej_______________6
