--- a/modules/689/pages/index.adoc
+++ b/modules/689/pages/index.adoc
@@ -1,1 +1,30 @@
 = 200 Reichstaler lent to Krückeberg No. 10 in Berenbusch.
+
+
+It is first of all important to realize that the order of the materials--documents, notes, etc--in the 
+case file does not reflect the order of events which the case file describes. The story flow or the actual
+events often differs from the filing order.
+
+== Chronological Timeline
+
+[cols="14%,22%,36%,28%",options="header"]
+|===
+| Date | Event | Details | Source
+
+| 1833 (from) | Interest begins | 5% on 133 rthl 7 mg parental debt | Doc 2 (Amt Bückeburg)
+
+| 1836-07-30 | Suit opened / pending | Later: 2× appellatorio, 1× supplicatorio (dates not given) | Doc 2
+
+| 1841-07-27 | Service (insinuirt) | “gleichlautendes Gegenbescheid” served by Möller; fees **22¼ mg** | Service slip (note/table)
+
+| 1841-09-08* | Distraint ordered | “unter 8 v.M.” relative to 1841-10-07 → inferred **8 Sept** | Doc 2  *inferred*
+
+| 1841-10-02 | Separate document | (Doc 1) | Doc 1
+
+| 1841-10-07 | Amt report (Doc 2) | Opposes installments; recommends **Anlehen 190 rthl**; Stätte size, insurance 525 rthl; debts 700 rthl | Doc 2
+
+| 1841-10-11 | Presented in Chamber | *pr. in Cam* | Doc 2 header
+
+| 1841-10-14 | Chamber rescript | “wie angetragen, **den Krückeberg zu bescheiden**” (Spring; vorl.) | “Copt.” sheet
+|===
+
