--- a/modules/689/pages/doc2-copt.adoc
+++ b/modules/689/pages/doc2-copt.adoc
@@ -14,7 +14,7 @@ C. 1/                              N.P. 1274
                 
 
 Copt                                Gesuch des Colons Krücke
-aus Amt Becknberg.                  berg N. 10 in Bernn      
+aus Amt Buckeburg.                  berg N. 10 in Bernn      
                                     busch, um Anlehns-
                                     consens betr:
 
