--- a/modules/689/pages/doc2-copt.adoc
+++ b/modules/689/pages/doc2-copt.adoc
@@ -20,8 +20,7 @@ C. 1/                              N.P. 1274
 Copt aus Amt Buckeburg.
 
 Gesuch des Colons Krückeberg N. 10 in Berenbusch, um
-Anlehnsconsens 
-betr:
+Anlehnsconsens betr:
 
 
 Das Amt wird auf den obigen Gegenstand betreffen
