--- a/modules/689/pages/doc2-copt.adoc
+++ b/modules/689/pages/doc2-copt.adoc
@@ -23,7 +23,7 @@ Gesuch des Colons Krückeberg N. 10 in Berenbusch, um
 Anlehnsconsens betr:
 
 
-Das Amt wird auf den obigen Gegenstand betreffen
+Das Amt wird auf den obigen Gegenstand betreffen-
 de Bericht vom 7. d. M. beauftragt, wie angetra-
 gen den Krückeburg zu bescheiden.
 Bbg. 14. Oct. 1841.
