--- a/modules/689/pages/doc2-copt.adoc
+++ b/modules/689/pages/doc2-copt.adoc
@@ -12,7 +12,7 @@ image::06-l.png[link=self]
 |
 [verse]
 ____
-N. 3/6                             N.C. 4487
+N. 3/6                            N.C. 4487
 C. 1/                              N.P. 1274
 ------
 = 4/6.
@@ -36,8 +36,9 @@ Fm        L
 ____
 
 |
-....
-N. 3/6                             N.C. 4487
+[verse]
+____
+N. 3/6                            N.C. 4487
 C. 1/                              N.P. 1274
 ------
 = 4/6.
@@ -59,5 +60,5 @@ By proxy (per procura)
 
 
 Fm        L
-....
+____
 |===
