--- a/modules/689/pages/doc2-copt.adoc
+++ b/modules/689/pages/doc2-copt.adoc
@@ -5,7 +5,7 @@ image::06-l.png[link=self]
 
 == Transliteration and Translation
 
-[cols="1a,1a"]
+[cols="1a,1a",frame=none,grid=none]
 |===
 |Transliteration|Translation
 
