--- a/modules/689/pages/literal-doc-index.adoc
+++ b/modules/689/pages/literal-doc-index.adoc
@@ -13,14 +13,14 @@ No   Acten  Designation        Ort Jahr Mon Z.
 1. Vorstellung des Col. Krückeberg   Bewilligung                       October
    No 10 in Berenbesch               eines dasselbe  Bbg.       1841             2
    Anb                               ad 200 rP                 
-2. Berichts Amts Bückeburg           Cour. aus        e            e        e    7  
-    Cpt. KRes. an dacstelbe          Kammerkasse      e            e        e   14
-3. Vorst. des Colons Krückeberg      gegen Ver        e            e      Nov   11    
-e  Vortrag des GKR odReik            pfaudung         e            e        e   15   
-e Cpt KRes. an Krückeberg            seiner Sammt    
-                                     lichebn Lau      Berenbusch   e        e    21
+2. Berichts Amts Bückeburg           Cour. aus        "            "        "    7  
+   [Gg./Cpt.] KRes. an dasselbe      Kammerkasse      "            "        "   14
+3. Vorst. des Colons Krückeberg      gegen Ver-       "            "      Nov   11    
+"  Vortrag des GKR odReik            pfaudung         "            "        "   15   
+" Cpt KRes. an Krückeberg            seiner Sammt    
+                                     lichebn Lau      Berenbusch   "        "    21
 4. Vorst. des [e/p] Krückeberg       dereien         
-e  Cpt. KRes. an Of. Creuzinger      item             Bbg          e        e    25   
+e  Cpt. KRes. an Of. Creuzinger      item             Bbg          "        "    25   
                                      Gesuch um 
 5. Bericht des Of. Creuzinger        Verkauf sein
    Anb. Situations. Riß der          ner Länderei   
