--- a/modules/689/pages/literal-doc-index.adoc
+++ b/modules/689/pages/literal-doc-index.adoc
@@ -14,7 +14,7 @@ No   Acten  Designation        Ort Jahr Mon Z.
    No 10 in Berenbesch               eines dasselbe  Bbg.       1841             2
    Anb                               ad 200 rP                 
 2. Berichts Amts Bückeburg           Cour. aus        "            "        "    7  
-   [Gg./Cpt.] KRes. an dasselbe      Kammerkasse      "            "        "   14
+   G[g]. KRes. an dasselbe           Kammerkasse      "            "        "   14
 3. Vorst. des Colons Krückeberg      gegen Ver-       "            "      Nov   11    
 "  Vortrag des GKR odReik            pfaudung         "            "        "   15   
 " Cpt KRes. an Krückeberg            seiner Sammt    
