--- a/todo.adoc
+++ b/todo.adoc
@@ -2,100 +2,8 @@
 
 == 689
 
-* image 02-r.png is not really image #2!!!!!!!!!!!!!!!!!!
-
-Somehow the 
-
-=== Step-by-Step Search Strategy on Arcinsys
-
-To search for a possible deed (Kaufbrief) or related land documents for Jobst Heinrich Krückeberg from 1800, follow these steps on the Arcinsys Niedersachsen portal.
-
-==== 1. Visit the Portal
-
-Start your search at:
-
-https://www.arcinsys.niedersachsen.de
-
-Click on the button labeled _"Recherche starten"_ (Start Search).
-
-==== 2. Enter Targeted Search Terms
-
-Use one of the following suggested search phrases (run each separately in the search bar labeled _"Suchbegriff"_):
-
-[cols="1,3"]
-|===
-| Search Phrase | Notes
-
-| `Kruckeberg Berenbusch`
-| Use the surname and village together.
-
-| `Kaufbrief Berenbusch`
-| Search for land deeds (purchase letters).
-
-| `Ausweisung Berenbusch`
-| Refers to land allocation or assignment.
-
-| `Colon Kruckeberg`
-| Uses his title as a hereditary tenant farmer.
-
-| `Hof Nr 10 Berenbusch`
-| Specific property reference.
-
-| `C. 67`
-| The archival call number from the case file.
-
-| `Krückeberg Kaufvertrag`
-| “Purchase contract” phrasing.
-
-| `Bückeburg Cammer 1800`
-| Broader search by institution and year.
-|===
-
-==== 3. Apply Archive Location Filter
-
-On the left sidebar under _"Archiv auswählen"_ (Choose Archive), select:
-
-[quote]
-____
-Niedersächsisches Landesarchiv – Standort Bückeburg
-____
-
-This will filter results to the relevant holdings from Schaumburg-Lippe.
-
-==== 4. (Optional) Use a Date Filter
-
-You may also apply a date filter:
-
-- From: `1795`
-- To: `1805`
-
-This helps narrow the results to the relevant time period.
-
-==== 5. Interpreting Results
-
-Click on any promising result title to view more details. Watch for keywords in the series or record descriptions
-such as:
-
-* _Cammer-Sachen_ or _Kammer-Sachen_ (Chamber matters)
-* _Liegenschaften_ (Real estate)
-* _Kaufverträge_ (Purchase contracts)
-* _Ausweisungen_ (Land assignments)
-* _Acta betreffend ..._ (Files concerning ...)
-
-If a result looks relevant, click on _"Zitierlink anzeigen"_ (Show citation link) to get a permanent link.
-
-==== Optional Follow-Up
-
-If you find a likely result, you can email the archive with the citation details to request more information or to
-inquire about access or digital copies.
-
-== Indexing System for Documents
-
-IMPORTANT: The numbers in the squares in the top right corner refer to the "`Description of document/action`" in Image 1.
-
-What is the structure of the contents of the 1236 folder. What is
-documents are in it? What are they about? How are they referenced. Is
-there an "`index`"?
+Work on the document index, both the literal version an the table version. 
+Submit the literal version to chatgpt for review.
 
 == How Documents are Referenced: Understanding the NLA 1236 Headers
 
