--- a/modules/689/pages/literal-doc-index.adoc
+++ b/modules/689/pages/literal-doc-index.adoc
@@ -10,26 +10,33 @@ image::01-r.png[link=self]
 No   Acten  Designation        Ort Jahr Mon Z.
 
 
-1. Vorstellung des Col. Krückeberg   Bewilligung                       October
-   No 10 in Berenbesch               eines dasselbe  Bbg.       1841             2
-   Anb                               ad 200 rP                 
-2. Berichts Amts Bückeburg           Cour. aus        "            "        "    7  
-   G[g]. KRes. an dasselbe           Kammerkasse      "            "        "   14
-3. Vorst. des Colons Krückeberg      gegen Ver-       "            "      Nov   11    
-"  Vortrag des GKR odReik            pfaudung         "            "        "   15   
-" Cpt KRes. an Krückeberg            seiner Sammt    
-                                     lichebn Lau      Berenbusch   "        "    21
-4. Vorst. des [e/p] Krückeberg       dereien         
-e  Cpt. KRes. an Of. Creuzinger      item             Bbg          "        "    25   
-                                     Gesuch um 
-5. Bericht des Of. Creuzinger        Verkauf sein
-   Anb. Situations. Riß der          ner Länderei   
-	   Söhren Weide              an auf der
-                                     Söhren           Bbg.
-
-
-
-
+1.  Vorstellung des Col. Krückeberg   Bewilligung                       October
+    No 10 in Berenbesch               eines dasselbe  Bbg.       1841             2
+    Anb                               ad 200 rP                 
+2.  Berichts Amts Bückeburg           Cour. aus        "            "        "    7  
+    G[g]. KRes. an dasselbe           Kammerkasse      "            "        "   14
+3.  Vorst. des Colons Krückeberg      gegen Ver-       "            "      Nov   11    
+"   Vortrag des GKR odReik            pfaudung         "            "        "   15   
+" xxGg. KRes. an Krückeberg           seiner sämmt    
+                                      lichebn Läu      Berenbusch   "        "    21
+4.  Vorst. des [e/p] Krückeberg       dereien         
+e   Cpt. KRes. an Of. Creuzinger      item             Bbg          "        "    25   
+                                      Gesuch um 
+5.  Bericht des Of. Creuzinger        Verkauf sein-    Baum         "     degbr   10
+    Anb. Situations. Riß der          ner Länderei   
+            Söhren Weide              en auf der
+                                      Söhren           Bbg.         "         "   16
+6.  Vortrag des GKR. odReik           
+                                      Weide            "            "         "   19
+"   Höchstes Retir. Ler. Regb.  
+"   P.V. des H odReik u Höchsters
+"   Resir. Sr. Durchlaucht
+7.  Gg H res. aus Amt Bückeburg
+8.  Bericht Amts Bückeburg
+9.  Bericht Amts Bückeburg
+10. Obligation über aus Fürstl.       Obligation.
+    Kammerkasse geliehene
+    200 rd Courant
 
 
 
